--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "hardhat": "^2.12.2"
+    "circom": "^0.5.46",
+    "circomlib": "^2.0.5",
+    "hardhat": "^2.12.2",
+    "snarkjs": "^0.5.0",
+    "websnark": "^0.0.5"
   },
   "devDependencies": {
     "@ethersproject/abi": "^5.4.7",
